--- a/favorite-things.html
+++ b/favorite-things.html
@@ -15,7 +15,7 @@
                 My Brother <strong>Aaron</strong>
                 
                 </li>
-                <li>My Sister Norah</li>
+                <li>My Sister <strong>Norah</strong></li>
                 <li>
                     <a href="http://www.example.com/jessica.html">
                       My friend <strong>Jessica</strong>
